# tvm_android

./: .gitmodules  README.md
tvm_rpc/: .gitignore  settings.gradle.kts  tvmrpc.keystore
tvm_rpc/app/: build.gradle.kts
tvm_rpc/app/src/androidTest/java/com/github/teren4m/tvm/rpc/: ExampleInstrumentedTest.kt
tvm_rpc/app/src/main/: AndroidManifest.xml
tvm_rpc/app/src/main/java/com/github/teren4m/tvm/rpc/: MainActivity.kt
tvm_rpc/app/src/main/java/com/github/teren4m/tvm/rpc/ui/theme/: Color.kt  Theme.kt  Type.kt
tvm_rpc/app/src/main/res/values/: strings.xml  themes.xml
tvm_rpc/app/src/test/java/com/github/teren4m/tvm/rpc/: ExampleUnitTest.kt
tvm_rpc/gradle/wrapper/: gradle-wrapper.properties
tvm_rpc/nativelib/: build.gradle.kts
tvm_rpc/nativelib/src/androidTest/java/com/github/teren4m/tvm/nativelib/: ExampleInstrumentedTest.kt
tvm_rpc/nativelib/src/main/cpp/: CMakeLists.txt  nativelib.cpp
tvm_rpc/nativelib/src/main/cpp/android_tvm/: CMakeLists.txt
tvm_rpc/nativelib/src/main/java/com/github/teren4m/tvm/nativelib/: NativeLib.kt
tvm_rpc/nativelib/src/test/java/com/github/teren4m/tvm/nativelib/: ExampleUnitTest.kt
